refactor(service): 提取ActionService中重复代码到私有方法
- 在ActionServiceImpl中提取公共逻辑到extracted方法
- 减少addAction和updateAction方法中的代码重复
- 为Receiver对象添加默认值处理逻辑

feat(processor): 为消息处理器添加事件类型字段

- 在MessageProcessor中为群消息添加eventType字段
- 在MessageProcessor中为私聊消息添加eventType字段
- 确保不同类型消息有正确的时间类型标识

refactor(scope): 更新Stream API收集方式

- 将List接口的toList()替换为Collectors.toList()
- 统一集合流处理的数据收集方式
- 确保兼容性并优化代码风格